fix: header width adjustment to remove horizontal scrolling

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,7 +5,6 @@ header {
   justify-content: center;
   gap: 32px;
   width: 100%;
-  min-width: 100vw;
 }
 
 header .logo-container {
